# marco-sparko

./: .gitignore  Cargo.toml  Cross.toml  Dioxus.toml  LICENSE-MIT  README.md  build.rs  gather_builds.sh  snippets.txt
assets/: MarcoSparko.icns
assets/styling/: main.css  navbar.css  page_content.css
docs/: ChromeInspector.md  GraphQL.md  Release.md  cachedData.md  index.md  profiles.md
docs/gettingStarted/: index.md  initOctopus.md  verboseMode.md
docs/octopus/: index.md  prototypeQueries.md  webUiQueries.md  webUiQueriesDashboard.md  webUiQueriesGetYourGeek.md  webUiQueriesMyEnergy.md
graphql/octopus/: ElectricityAgreementLineItems.graphql  GasAgreementLineItems.graphql  LatestBill.graphql  Login.graphql  MeterAgreements.graphql  MeterConsumption.graphql  Summary.graphql  account.graphql  bill.graphql  getAccountPropertiesMeters.graphql  meter.graphql  meters.graphql  octopus-schema.graphql
release/files/any-apple-darwin/app/Marco Sparko.app/Contents/: Info.plist
release/files/any-apple-darwin/app/Marco Sparko.app/Contents/MacOS/: Marco Sparko
src/: authenticated_request_manager.rs  cache_manager.rs  error.rs  gql.rs  lib.rs  main.rs  octopus.rs  private_file.rs  profile.rs  request_manager.rs  system.rs  util.rs
src/components/: app.rs  hero.rs  mod.rs
src/gql/: client.rs  error.rs  traits.rs  types.rs
src/gql/types/: boolean.rs  date.rs  datetime.rs  float.rs  id.rs  int.rs
src/octopus/: account.rs  account_property_meters.rs  bill copy.rs  bill.rs  broken-graphql.rs  consumption.rs  consumption_type.rs  decimal.rs  derived.rs  error.rs  graphql.rs  meter.rs  meter_point.rs  meter_point_property_view.rs  meter_property_view.rs  page_info.rs  root.rs  tariff.rs  token copy.rs  token.rs  transaction.rs
src/octopus/bill/: manager.rs
src/views/: blog.rs  home.rs  mod.rs  module.rs  navbar.rs  page_content.rs  profile.rs
