[package]
name = "marco-sparko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], with = "iso8601"}
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
