[package]
name = "marco-sparko"
description = "The Energy Explorer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], with = "iso8601"}
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7.3"
dirs = "5.0"
clap = { version = "4.5.13", features = ["derive", "env"] }
async-trait = "0.1.81"

[dev-dependencies]
tokio-test = "*"
