[package]
name = "marco-sparko"
description = "The Energy Explorer"
version = "0.4.0"
edition = "2021"
default-run = "marco-sparko"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
sparko_graphql_builder = { path = "../sparko_graphql/sparko_graphql_builder" }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[dependencies]
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"], with = "iso8601"}
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7.3"
dirs = "5.0"
clap = { version = "4.5.13", features = ["derive", "env"] }
async-trait = "0.1.81"
#once_cell = "1.19.0"
display_json = "0.2.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
const_format = "0.2.32"
sparko_graphql = {version = "0.4.0", path = "../../git/sparko_graphql" }
#serde_with = "3.9.0"
#reedline-repl-rs = { version = "1.2.1", features = ["async"] }
futures = "0.3.31"
reedline = "0.38.0"
nu-ansi-term = "0.50.1"
indexmap = "2.7.1"
time-tz = "2.0.0"
#tzdb = "0.7.2"
#tz-rs = "0.7.0"
dioxus = { version = "0.7.3", features = ["router", "desktop"] }
dioxus-desktop = "0.7"
anyhow = "1.0.100"
wasm-bindgen = "0.2.105"
fs4 = "0.13.1"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem"
]}


[dev-dependencies]
tokio-test = "*"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
